--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,46 @@
-version: '2'
-
+version: '3'
 services:
-  db:
-    image: mysql:5.7
-    volumes:
-      - db_data:/var/lib/mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: wordpress
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-
-  wordpress:
+  # TODO add nginx service in front
+  nginx_proxy:
+    container_name: nginx
+    build:
+      context: ./nginx/.
     depends_on:
-      - db
-    image: wordpress:latest
-    volumes:
-      - wp_data:/var/www/html
+      - shinyproxy
     ports:
-      - "8000:80"
-    restart: always
-    environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_PASSWORD: wordpress
-volumes:
-    db_data:
-    wp_data:
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/logs/:/var/log/nginx/
+    networks:
+      shinyproxy-net:
+  shinyproxy:
+    image: openanalytics/shinyproxy
+    # image: openanalytics/shinyproxy-snapshot
+    user: root:root
+    hostname: shinyproxy
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./shinyproxy/application.yml:/opt/shinyproxy/application.yml
+    ports:
+      - 8080:8080
+    networks:
+      shinyproxy-net:
+        ipv4_address: 192.168.92.21
+  app_basic:
+    container_name: app_basic
+    platform: linux/amd64
+    #image: openstat_app_basic:230413
+    stdin_open: true
+    build:
+      context: ./app/basic/.
+    expose:
+      - 3838
+networks:
+  shinyproxy-net:
+    ipam:
+      driver: default
+      config:
+        - subnet: "192.168.92.0/24"
