--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,11 +11,23 @@ http {
     charset	utf-8;
     server {
         listen 80;
-        # server_name localhost;
+        listen [::]:80;
 	    client_max_body_size 6M;
+        # server_name localhost;
+
         location / {
-            proxy_pass   http://127.0.0.1:80;
-            proxy_redirect     off;
+            proxy_pass          http://127.0.0.1:8080/;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_read_timeout 600s;
+
+            proxy_redirect    off;
+            proxy_set_header  Host             $http_host;
+            proxy_set_header  X-Real-IP        $remote_addr;
+            proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
+            proxy_set_header  X-Forwarded-Protocol $scheme;
         }
     }
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -26,7 +38,5 @@ http {
     server_tokens   off;
     keepalive_timeout  65;
     # 아래 2 line 없는 경우 RStudio상에서 shiny 실행되지 않음. -> Websocket Error
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
     include /etc/nginx/conf.d/*.conf;
 }
