--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
         # server_name localhost;
 
         location / {
-            proxy_pass          http://127.0.0.1:8080/;
+            proxy_pass          http://shinyproxy:8080/;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -30,6 +30,22 @@ http {
             proxy_set_header  X-Forwarded-Protocol $scheme;
         }
     }
+
+    # server {
+    #     listen 443 ssl;
+    #     server_name broadcast.cocoblue.me;
+
+    #     ssl_certificate /etc/letsencrypt/live/cocoblue.me/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/cocoblue.me/privkey.pem;
+
+    #     location / {
+    #         proxy_pass http://broadcast:8080;
+    #         proxy_set_header    Host                $http_host;
+    #         proxy_set_header    X-Real-IP           $remote_addr;
+    #         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    #     }
+    # }
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
