--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3'
 services:
-  # TODO add nginx service in front
   nginx:
     container_name: nginx
     build:
@@ -11,40 +10,42 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/logs/:/var/log/nginx/
-    depends_on:
-      - shinyproxy
-    networks:
-      - nginx-net
   shinyproxy:
-    image: openanalytics/shinyproxy
+    # image: openanalytics/shinyproxy
     # image: openanalytics/shinyproxy-snapshot
-    user: root:root
-    hostname: shinyproxy
+    build:
+      context: ./shinyproxy/.
     restart: unless-stopped
     depends_on:
-      - app_basic
+      - nginx
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./shinyproxy/application.yml:/opt/shinyproxy/application.yml
       - ./shinyproxy/logs/:/opt/shinyproxy/logs/
-    networks:
-      - nginx-net
-      - shinyproxy-net
-    expose:
-      - 8080
+    ports:
+      - 8080:8080
   app_basic:
     container_name: app_basic
     platform: linux/amd64
-    #image: openstat_app_basic:230413
     stdin_open: true
+    depends_on:
+      - shinyproxy
     build:
-      context: ./app/basic/.
-    networks:
-      - shinyproxy-net
+      context: ./apps/basic/.
     expose:
       - 3838
-networks:
-  nginx-net:
-    driver: bridge
-  shinyproxy-net:
-    driver: bridge
+  app_hello:
+    container_name: app_hello
+    platform: linux/amd64
+    stdin_open: true
+    depends_on:
+      - shinyproxy
+    build:
+      context: ./apps/hello/.
+    expose:
+      - 3838
+# networks:
+#   nginx-net:
+#     driver: bridge
+#   shinyproxy-net:
+#     driver: bridge
